<resources>
    <string name="com_auth0_client_id">o16QUgbzI9sBoE709cTboQIyK1OP6Xy0</string>
    <string name="com_auth0_domain">normorovers.au.auth0.com</string>

    <string name="app_name">MMT Event</string>
    <string name="title_activity_main">MMT Event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magical Mystery Tour</string>
    <string name="nav_header_subtitle">VALHALLA 2019</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_checkin_camera">Pre Checkin</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_checkin">Check-in</string>
    <string name="menu_checkin_manual">Manual Base Check-in</string>
    <string name="menu_base_log">Base Log</string>
    <string name="menu_base_log_manuel">Base Log Manual</string>
    <string name="menu_teams">Teams</string>
    <string name="placeholder_registration">Registration</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_members">Members:</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="logout">Logout</string>
    <string name="title_activity_edit">EditTeamActivity</string>
    <string name="title_activity_edit_team">Edit Team</string>
    <string name="placeholder_mobile">0400 000 000</string>
    <string name="placeholder_full_name">First Last</string>
    <string name="placeholder_crew">Nar Nar Goon RC</string>
    <string name="placeholder_teamname">Team Name</string>
    <string name="team_description">%1$d Members</string>
    <string name="empty_team_name">[Team Name]</string>
    <string name="empty_team_registration">[Team Rego]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_qr">Test QR</string>
    <string name="scan_team">Scan Team</string>
    <string name="multiscan_status">%1$d Items</string>
    <string name="title_activity_ticket_selector">TicketSelectorActivity</string>
    <string name="title_activity_ticket">View Ticket</string>
    <string name="scan_ticket">SCAN TICKET</string>
    <string name="placeholder_payment">Payment</string>
    <string name="payment_paid">Paid</string>
    <string name="payment_unpaid">UNPAID: $%1$.2f</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_base_team_log">BaseTeamLogActivity</string>
    <string name="shared_preferences">com.normorovers.mmt.app.event.mmt.SHARED_PREFERENCES_KEY</string>
    <string name="view_logs">View Logs</string>
    <string name="search">Search</string>
    <string name="team_at_base">Team At Base?</string>
    <string name="give_points">Give Points</string>
    <string name="give_trivia_points">Give Trivia Points</string>
    <string name="make_comment">Make a nasty comment</string>
    <string name="mark_clues">Mark Clues Opened!</string>
    <string name="logs">Logs</string>
    <string name="clues_opened">Clues Opened</string>
    <string name="base_manager">Base Manager</string>
    <string name="placeholder_id">ID</string>
    <string name="placeholder_team_id">ID</string>
</resources>
